gccida/c1/simplify_giv_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6867:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6868:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6877:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6878:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6883:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v31; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6884:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6892:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6892:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6903:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6903:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6910:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6916:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6916:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6919:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6919:5: error: use of undeclared identifier 'v67'
rtx v67; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6923:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v71; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6924:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v72; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6925:4: error: expected ';' after expression
rtx v73; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/loop.c:6925:5: error: use of undeclared identifier 'v73'
rtx v73; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_giv_expr/src/obj/loop.o] Error 1
